Add impls of PageSqlRepository for all resource classes. Fix res. classes respectively.
Add CardRepository, CardListSqlRepository, BoardSqlRepository, WorkspaceSqlRepository and UserSqlRepository.

Fix resource classes:
User - map "pageName" and "pageDescription" accessors to "username" and "about" accessors  respectively
CardList - add "boardId" and "position" fields
Board - add "workspaceId" field